Tweaked population values, changed number of cuts in GeneticStrategy